# xztrainer

./: .gitignore  mkdocs.yml  pyproject.toml  setup.cfg
docs/: index.md  trainable.md  trainer.md  utilities.md
example/: cifar10.py
src/xztrainer/: __init__.py  model.py  sampler.py  trainer.py  xztrainer.py
src/xztrainer/engine/: standard.py
src/xztrainer/engines/: __init__.py  base.py  deepspeed.py  standard.py
src/xztrainer/logger/: base.py  null.py  stream.py  tensorboard.py
