[metadata]
name = xztrainer
version = 0.0.1
author = mrAppleXZ
author_email = me@pearx.net
description = nope
long_description = nope
long_description_content_type = text/plain
url = https://github.com/mrapplexz/xztrainer
project_urls =
    Bug Tracker = https://github.com/mrapplexz/xztrainer/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src